client/client.css
.board {
    display: inline-block;
}

.players {
    display: inline-block;
}

.playerRow {
    display: table-row;
    border: 1px solid black;
}

.playerName {
    display: table-cell;
    padding: 0.3em;
    vertical-align: middle;
    text-align: left;
}

.card {
    width: 5em;
    height: 6em;
    display: inline-block;
    margin: 0.5em;
    border: 2px solid black;
    box-sizing: border-box;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
    position: relative;
    background: #fff;
}

.cardTop {
    width: 100%;
    height: 1.5em;
    text-align: center;
    padding: 0.2em;
    box-sizing: border-box;
    border-bottom: 1px solid black;
}

.cardPrice {
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
    margin: auto;
}

.cardPriceComponent {
    width: 1em;
    height: 1em;
    padding: 0.3em;
    border-radius: 50%;
    border: 1px solid black;
    margin: 0.2em;
    text-align: center;
    display: inline-block;
}

.noble {
    width: 5em;
    height: 6em;
    display: inline-block;
    margin: 0.5em;
    border: 2px solid black;
    box-sizing: border-box;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
    position: relative;
    background: #fff;
}

.nobleTop {
    background: #5a1091;
    color: white;
    width: 100%;
    height: 1.5em;
    text-align: center;
    padding: 0.2em;
    box-sizing: border-box;
    border-bottom: 1px solid black;
}

.nobleRequirement {
    position: absolute;
    bottom: 0;
    text-align: center;
    width: 100%;
    margin: auto;
}

.nobleRequirementComponent {
    width: 0.7em;
    height: 1em;
    padding: 0.3em;
    border-radius: 0.2em;
    border: 1px solid black;
    margin: 0.2em;
    text-align: center;
    display: inline-block;
}

.facedownCard {
    width: 5em;
    height: 6em;
    display: inline-block;
    background: #383535;
    cursor: default;
    border: 2px solid black;
    padding: 0.2em;
    margin: 0.5em;
    box-sizing: border-box;
}

.tierDeck {
    width: 5em;
    height: 6em;
    display: inline-block;
    margin: 0.5em;
    border: 2px solid black;
    padding: 0.2em;
    box-sizing: border-box;
    background: #383535;
    color: white;
    text-align: center;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
}

.chipPlaceholder {
    width: 54px;
    height: 54px;
    display: inline-block;
    text-align: center;
}

.selected {
    border: 2px solid #00D953 !important;
}

.chip {
    width: 1em;
    height: 1em;
    padding: 0.3em;
    margin-left: 3px;
    margin-right: 3px;
    border-radius: 50%;
    border: 2px solid black;
    text-align: center;
    display: inline-block;
    font-size: 24px;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: default;
}

.red {
    background: #B30018;
    color: white;
}

.green {
    background: #0E7311;
    color: white;
}

.blue {
    background: #0027A6;
    color: white;
}

.white {
    background: #E6F5F7;
    color: black;
}

.black {
    background: #140E0E;
    color: white;
}

.gold {
    background: #FFE15C;
    color: black;
}

.availableChips {
    display: inline-block;
}

.availableNobles {
    text-align: center;
}

.ownedCards .card {
    margin-bottom: -6em;
}

.cardRow {
    display: table-row;
}

.ownedCards {
    display: table-cell;
    padding: 3px;
    padding-bottom: 5.5em;
    text-align: center;
    max-width: 96px;
    vertical-align: top;
}

.ownedNobles {
    vertical-align: top;
}

.reservedCards {
    display: table-cell;
    border-left: 1px solid black;
    min-width: 96px;
    vertical-align: top;
}

.chipRow {
    display: table-row;
}

.ownedChips {
    display: table-cell;
    text-align: center;
    padding-bottom: 3px;
    padding-top: 3px;
}

.myBoard {
    padding: 0;
    border: 1px solid black;
    display: table-cell;
    position: relative;
}

.oppBoard {
    padding: 0;
    border: 1px solid black;
    display: table-cell;
    position: relative;
}

.tierView {
    position: relative;
}

table {
    border-collapse: collapse;
}

.actionArea {
    display: inline-block;
    margin-left: 5px;
    position: relative;
    top: -3px;
}

.actionArea button {
    margin-left: 5px;
}

.actionRequestText {
    font-size: 16px;
    text-align: center;
    padding: 0.2em;
}

.currentVP {
    text-align: center;
}

